# ayon-jira

./: .gitignore  README.md  create_package.py  package.py  ruff.toml
client/: pyproject.toml
client/ayon_jira/: __init__.py  addon.py  version.py
client/ayon_jira/plugins/publish/: collect_jira_credentials.py  collect_jira_notifications.py  collect_jira_ticket_info.py  integrate_jira_comment.py
frontend/: README.md  index.html  package.json
frontend/src/: App.css  App.jsx  Jira.jsx  Jira.styled.js  PathInput.jsx  common.js  dummy_data.json  index.jsx  index.sass  index.scss  main.jsx
frontend/src/addon/: index.jsx
server/: __init__.py  addon_settings_access.py  custom_fields.py  templates.py
server/settings/: __init__.py  main.py  publish_plugins.py
server/templates/: Tier_1_Outfit_Ayon_Template.json  Tier_1_Outfit_Jira_Template.json
