[tool.poetry]
name = "Jira"
version = "0.0.1-dev.1"
description = "Jira Addon"
authors = ["Ynput Team <team@ynput.io>"]
license = "MIT License"
homepage = "https://ynput.io"
documentation = "https://github.com/ynput/ayon-slack/blob/develop/README.md"
repository = "https://github.com/ynput/ayon-slack/tree/develop"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[ayon.runtimeDependencies]
atlassian-python-api = "^3.41.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
